# lemming

./: .bazelrc  .bazelversion  .clang-format   .gitignore  .gitmodules  .golangci.yml  BUILD  BUILD.bazel  Dockerfile  Dockerfile.lemming  Dockerfile.lemming.dockerignore  Dockerfile.operator  Dockerfile.operator.dockerignore  Dockerfile.saibuilder  Dockerfile.syncdbuilder  MODULE.bazel  Makefile  README.md  WORKSPACE  bookworm.lock.json  bookworm.yaml  go.mod  go.sum  go.work  go.work.sum  lemming.go  lemming_linux.go  lemming_test.go  repositories.bzl  skaffold.yaml
bgp/: .markdownlint.yaml  BUILD  BUILD.bazel  README.md  bgp.go  bgpconfig.go  config.go  config_test.go  debug.go  gobgp.go  gobgp2.go  gobgp_test.go  ocgobgp.go  util.go
bgp/docs/: gobgp_integration.md  life_of_a_bgp_update_message.md
bgp/local_tests/: BUILD.bazel  prefix_set_test.go  route_propagation_test.go  session_establish_test.go  ygnmi_test.go
bgp/tests/local_tests/: BUILD  BUILD.bazel  attributes_test.go  community_count_test.go  community_set_test.go  next_hop_attr_test.go  own_as_path_test.go  policy_test.go  prefix_set_test.go  route_propagation_test.go  route_type_test.go  session_establish_test.go  set_attributes_test.go  ygnmi_test.go
cmd/decodepacket/: BUILD.bazel  decodepacket.go
dataplane/: BUILD  BUILD.bazel  Dockerfile  README.md  reconcilers_linux.go  reconcilers_nonlinux.go  server.go  server_test.go
dataplane/apigen/: BUILD  apigen.go
dataplane/apigen/ccgen/: BUILD  ccgen.go  servergen.go
dataplane/apigen/docparser/: BUILD  docparser.go
dataplane/apigen/protogen/: BUILD  protogen.go  protogen_test.go
dataplane/apigen/saiast/: BUILD  saiast.go
dataplane/apigen/typeinfo/: BUILD  typeinfo.go  types.go
dataplane/config/: BUILD  config.go
dataplane/cpusink/: BUILD  cpusink.go
dataplane/docs/: addingfeature.md  dataplanedebug.md  dataplaneforsonic.md  libsaibuild.md  packetflow.md  pktiohandler.md  protoforsai.md
dataplane/dplaneopts/: BUILD  dplaneopts.go
dataplane/dplanerc/: BUILD  interface.go  routes.go
dataplane/forwarding/: BUILD  fwd.go  info.go
dataplane/forwarding/attributes/: BUILD.bazel  attributes.go
dataplane/forwarding/fwdaction/: BUILD  BUILD.bazel  action.go  action_test.go
dataplane/forwarding/fwdbuilder/: BUILD.bazel  action.go
dataplane/forwarding/fwdconfig/: BUILD  BUILD.bazel  action.go  packet.go  table.go
dataplane/forwarding/fwdport/: BUILD  BUILD.bazel  port.go  port_test.go
dataplane/forwarding/fwdtable/: BUILD  BUILD.bazel  table.go  table_test.go
dataplane/forwarding/protocol/: BUILD  attr.go  doc.go  handler.go  packet.go  parser.go  util.go
dataplane/handlers/: BUILD  BUILD.bazel  interface.go  routes.go
dataplane/internal/engine/: BUILD  BUILD.bazel  common.go  engine.go  engine_linux.go  engine_nonlinux.go  helpers.go  port.go  table.go
dataplane/kernel/: BUILD  genetlink.c  genetlink.go  kernel.go  tap.go
dataplane/luciusctl/: BUILD  luciusctl.go  main.go
dataplane/main/: main.go
dataplane/proto/: BUILD  acl.pb.go  acl.proto  bfd.pb.go  bfd.proto  bmtor.pb.go  bmtor.proto  bridge.pb.go  bridge.proto  buffer.pb.go  buffer.proto  common.pb.go  common.proto  counter.pb.go  counter.proto  debug_counter.pb.go  debug_counter.proto  dtel.pb.go  dtel.proto  fdb.pb.go  fdb.proto  generic_programmable.pb.go  generic_programmable.proto  hash.pb.go  hash.proto  hostif.pb.go  hostif.proto  ipmc.pb.go  ipmc.proto  ipmc_group.pb.go  ipmc_group.proto  ipsec.pb.go  ipsec.proto  isolation_group.pb.go  isolation_group.proto  l2mc.pb.go  l2mc.proto  l2mc_group.pb.go  l2mc_group.proto  lag.pb.go  (+59 more)
dataplane/protocol/: BUILD  registry.go  registry_test.go
dataplane/reconcilers/: BUILD  interface.go  routes.go
dataplane/saigo/: BUILD.bazel  lucius.h  sai.cc  sai_entrypoint.cc  saigo.c  saigo.cc  saigo.go  saigo.h  translator.cc  translator.h
dataplane/saiserver/: BUILD  acl.go  acl_test.go  bridge_test.go  debug_counter.go  fdb.go  hostif.go  hostif_test.go  isolation_group.go  l2.go  l2mc_test.go  mirror.go  mirror_test.go  policer.go  policer_test.go  ports.go  ports_test.go  routing.go  routing_test.go  saiserver.go  switch.go  switch_test.go  tunnel.go  tunnel_test.go  udf.go  udf_test.go  vlan_test.go
dataplane/server/: server.go
dataplane/standalone/: BUILD  BUILD.bazel  Dockerfile  acl.cc  acl.h  bridge.cc  bridge.h  buffer.cc  buffer.h  common.cc  common.h  dtel.cc  dtel.h  entrypoint.cc  hostif.cc  hostif.h  neighbor.cc  neighbor.h  next_hop.cc  next_hop.h  next_hop_group.cc  next_hop_group.h  policer.cc  policer.h  port.cc  port.h  route.cc  route.h  router_interface.cc  router_interface.h  sai_entrypoint.cc  server.cc  switch.cc  switch.h  translator.cc  translator.h  tunnel.cc  tunnel.h  vlan.cc  vlan.h
gnoi/: BUILD  BUILD.bazel  file.go  gnoi.go  gnoi_test.go  linkqual.go
gnoi/bootconfig/: BUILD  bootconfig.go  bootconfig_test.go
gnsi/: BUILD  BUILD.bazel  gnsi.go
gnsi/acltrie/: BUILD  BUILD.bazel  trie.go  trie_test.go
gnsi/pathz/: BUILD  BUILD.bazel  pathz.go  pathz_test.go
internal/packetutil/: BUILD.bazel  capture.go
operator/: BUILD  BUILD.bazel  Makefile  PROJECT  go.mod  go.sum  main.go
operator/controllers/: BUILD  BUILD.bazel  lemming_controller.go  lemming_controller_test.go  suite_test.go
operator/hack/: boilerplate.go.txt
p4rt/: BUILD  BUILD.bazel  p4rt.go
proto/dataplane/: BUILD  BUILD.bazel  dataplane.pb.go  dataplane.proto  dataplane_grpc.pb.go  gen.sh  generate.go
proto/forwarding/: BUILD  BUILD.bazel  forwarding_action.pb.go  forwarding_action.proto  forwarding_attribute.pb.go  forwarding_attribute.proto  forwarding_common.pb.go  forwarding_common.proto  forwarding_info.pb.go  forwarding_info.proto  forwarding_notification.pb.go  forwarding_notification.proto  forwarding_operation.pb.go  forwarding_operation.proto  forwarding_packetsink.pb.go  forwarding_packetsink.proto  forwarding_port.pb.go  forwarding_port.proto  forwarding_service.pb.go  forwarding_service.proto  forwarding_service_grpc.pb.go  forwarding_table.pb.go  forwarding_table.proto  gen.sh  generate.go
(+1444 files in other folders)
