load("@io_bazel_rules_go//go:def.bzl", "go_test")

go_test(
    name = "local_tests_test",
    srcs = [
        "session_establish_test.go",
        "ygnmi_test.go",
    ],
    deps = [
        "//:lemming",
        "//gnmi/fakedevice",
        "//gnmi/oc",
        "//gnmi/oc/ocpath",
        "@com_github_openconfig_gnmi//proto/gnmi",
        "@com_github_openconfig_ygnmi//ygnmi",
        "@com_github_openconfig_ygot//ygot",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//credentials/local",
    ],
)
