load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "handlers",
    srcs = [
        "interface.go",
        "routes.go",
    ],
    importpath = "github.com/openconfig/lemming/dataplane/handlers",
    visibility = ["//visibility:public"],
    deps = [
        "//dataplane/internal/engine",
        "//dataplane/internal/iface",
        "//dataplane/internal/kernel",
        "//gnmi",
        "//gnmi/gnmiclient",
        "//gnmi/oc",
        "//gnmi/oc/ocpath",
        "//gnmi/reconciler",
        "//proto/dataplane",
        "//proto/forwarding",
        "@com_github_golang_glog//:glog",
        "@com_github_openconfig_ygnmi//schemaless",
        "@com_github_openconfig_ygnmi//ygnmi",
        "@com_github_openconfig_ygot//ygot",
        "@com_github_vishvananda_netlink//:netlink",
        "@org_golang_x_sys//unix",
    ],
)
