cc_library(
    name = "translator",
    srcs = [
        "port.cc",
        "switch.cc",
        "translator.cc",
    ],
    hdrs = [
        "port.h",
        "switch.h",
        "translator.h",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//dataplane/standalone/lucius:lucius_clib",
        "//dataplane/standalone/sai:entry",
        "//proto/forwarding:forwarding_cc_grpc",
        "//proto/forwarding:forwarding_cc_proto",
        "@com_github_grpc_grpc//:grpc++",
        "@com_github_opencomputeproject_sai//:sai",
    ],
)

cc_library(
    name = "entrypoint",
    srcs = [
        "entrypoint.cc",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":translator",
        "//dataplane/standalone/sai",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
    ],
    alwayslink = True,
)

cc_binary(
    name = "sai",
    linkshared = True,
    linkstatic = True,
    deps = [
        ":entrypoint",
    ],
)

# By building a non-shared library, detect some linker issues.
cc_binary(
    name = "saibin",
    linkstatic = True,
    deps = [
        ":entrypoint",
    ],
)
