load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "forwarding_proto",
    srcs = [
        "forwarding_action.proto",
        "forwarding_attribute.proto",
        "forwarding_common.proto",
        "forwarding_info.proto",
        "forwarding_notification.proto",
        "forwarding_operation.proto",
        "forwarding_packetsink.proto",
        "forwarding_port.proto",
        "forwarding_service.proto",
        "forwarding_table.proto",
    ],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "forwarding_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/openconfig/lemming/proto/forwarding",
    proto = ":forwarding_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "forwarding",
    srcs = ["generate.go"],
    embed = [":forwarding_go_proto"],
    importpath = "github.com/openconfig/lemming/proto/forwarding",
    visibility = ["//visibility:public"],
)
