load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "engine",
    srcs = [
        "common.go",
        "engine.go",
        "helpers.go",
    ],
    importpath = "github.com/openconfig/lemming/dataplane/internal/engine",
    visibility = ["//dataplane:__subpackages__"],
    deps = [
        "//proto/dataplane",
        "//proto/forwarding",
        "@com_github_golang_glog//:glog",
    ],
)
