cc_library(
    name = "sai",
    srcs = glob(["*.cc"]),
    hdrs = glob(["*.h"], exclude = ["entry.h"]),
    visibility = ["//visibility:public"],
    deps = [
        "//dataplane/standalone:translator",
        "@com_github_opencomputeproject_sai//:sai",
        "@com_github_google_glog//:glog",
        ":entry",
    ],
)

cc_library(
    name = "entry",
    hdrs = ["entry.h"],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opencomputeproject_sai//:sai",
    ],
)